Added materials to numpy section

--- a/lezione6.ipynb
+++ b/lezione6.ipynb
@@ -319,6 +319,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "caa2cd4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[72 35 64 88 51 90 74 12]\n",
+      "[72, 35, 64, 88, 51, 90, 74, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "CURVE_CENTER = 80 # Sintassi standard per le costanti\n",
+    "grades = np.array([72, 35, 64, 88, 51, 90, 74, 12])\n",
+    "grades_list = [72, 35, 64, 88, 51, 90, 74, 12]\n",
+    "\n",
+    "print(grades)\n",
+    "print(grades_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8333435b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(grades))\n",
+    "print(type(grades_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c039cf47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 91.25,  54.25,  83.25, 100.  ,  70.25, 100.  ,  93.25,  31.25])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def curve(grades):\n",
+    "     average = grades.mean()\n",
+    "     change = CURVE_CENTER - average\n",
+    "     new_grades = grades + change\n",
+    "     return np.clip(new_grades, grades, 100)\n",
+    "\n",
+    "curve(grades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cee3527",
+   "metadata": {},
+   "source": [
+    "1. **Importazione di NumPy**\n",
+    "   Alla riga 1 si importa la libreria NumPy con l’alias `np`, una convenzione che abbrevia i comandi successivi.\n",
+    "\n",
+    "2. **Creazione dell’array**\n",
+    "   Alla riga 3 si definisce un array monodimensionale chiamato `grades` di lunghezza 8 e tipo `int64`. In seguito esplorerai forma e tipo dei dati più a fondo, ma per ora basti sapere che hai un vettore di 8 valori interi.\n",
+    "\n",
+    "3. **Calcolo della media**\n",
+    "   Alla riga 5 si richiama il metodo `.mean()` sull’array: in un solo passaggio NumPy somma tutti gli elementi e ne restituisce la media. Gli array di NumPy dispongono di numerosi metodi analoghi per operazioni statistiche o matematiche.\n",
+    "\n",
+    "4. **Vectorization e Broadcasting**\n",
+    "   Alla riga 7 si sfruttano due concetti chiave:\n",
+    "\n",
+    "   * **Vectorization**: l’operazione (es. somma di uno stesso valore) viene applicata simultaneamente a tutti gli elementi dell’array, eliminando la necessità di cicli espliciti.\n",
+    "   * **Broadcasting**: NumPy “allinea” array di forme diverse per permettere calcoli vettoriali fra loro. Qui `grades` è un array shape `(8,)` e `change` è uno scalare shape `(1,)`; NumPy aggiunge automaticamente `change` a ciascun elemento di `grades`. Non avrebbe funzionato se grades fosse stata una lista!\n",
+    "\n",
+    "5. **Clipping dei valori**\n",
+    "   Alla riga 8 si utilizza la funzione `np.clip()`, che garantisce che i voti “curve‑dati” non scendano sotto un minimo né superino un massimo.\n",
+    "\n",
+    "   * Il secondo argomento di `clip()` è proprio l’array originale `grades`: così ogni voto corretto non scende mai al di sotto del suo valore iniziale.\n",
+    "   * Il terzo argomento è lo scalare `100`, che tramite broadcasting assicura che nessun voto ecceda il 100%.\n",
+    "\n",
+    "> **Consiglio**: NumPy mette a disposizione decine di funzioni e metodi specializzati. Se ti sembra di ripetere operazioni comuni o di dover scrivere cicli, consulta la documentazione: molto probabilmente esiste già una routine adatta.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "b845b4b9",
    "metadata": {
@@ -331,6 +433,205 @@
     "%%bash\n",
     "# installiamo matplotlib\n",
     "pip install numpy matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79838613",
+   "metadata": {},
+   "source": [
+    "## Forme degli array (Shape)\n",
+    "\n",
+    "* **Shape** è la tupla che descrive la dimensione di ciascun asse di un array.\n",
+    "* Ogni array NumPy espone la proprietà `.shape`, che restituisce tale tupla.\n",
+    "* È fondamentale che gli array abbiano la forma che le funzioni si aspettano: un controllo rapido è stampare l’array insieme a `array.shape`.\n",
+    "\n",
+    "**Esempio: creazione e verifica di un array 3D 2×2×3**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7c8d29",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 2, 3)\n",
+      "[[[29.3 42.1 18.8]\n",
+      "  [16.1 38.  12.5]]\n",
+      "\n",
+      " [[12.6 49.9 38.6]\n",
+      "  [31.3  9.2 22.2]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Creo un vettore di 12 temperature e lo rimodello in un blocco 2×2×3\n",
+    "temperatures = np.array([\n",
+    "    29.3, 42.1, 18.8, 16.1, 38.0, 12.5,\n",
+    "    12.6, 49.9, 38.6, 31.3,  9.2, 22.2\n",
+    "]).reshape(2, 2, 3)\n",
+    "# Verifico la shape\n",
+    "print(temperatures.shape)\n",
+    "\n",
+    "# Visualizzo l’array\n",
+    "print(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7be6ac2",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(22.2)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Supponiamo di voler selezionare la temperatura 22.2\n",
+    "temperature = temperatures[1, 1, 2]\n",
+    "# [\"tabella\", \"riga\", \"colonn\"]\n",
+    "temperature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cabb2cc",
+   "metadata": {},
+   "source": [
+    "* Con tre o più dimensioni diventa difficile “vedere” i dati; per questo è utile\n",
+    "\n",
+    "  * ribaltare (“swap”) assi con `.swapaxes()`\n",
+    "  * stampare shape e contenuto finché non si è certi della disposizione.\n",
+    "\n",
+    "**Esempio: scambiare l’asse 1 con l’asse 2**\n",
+    "\n",
+    "```python\n",
+    "reordered = np.swapaxes(temperatures, 1, 2)\n",
+    "print(reordered)\n",
+    "# Output:\n",
+    "# array([[[29.3, 16.1],\n",
+    "#         [42.1, 38. ],\n",
+    "#         [18.8, 12.5]],\n",
+    "#\n",
+    "#        [[12.6, 31.3],\n",
+    "#         [49.9,  9.2],\n",
+    "#         [38.6, 22.2]]])\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Assi (Axes)\n",
+    "\n",
+    "* Gli **assi** indicano le dimensioni ed sono indicizzati da 0 in su.\n",
+    "\n",
+    "  * In un array 2D, `axis=0` è l’asse verticale (righe), `axis=1` quello orizzontale (colonne).\n",
+    "* Molte funzioni NumPy cambiano comportamento a seconda dell’argomento `axis`.\n",
+    "\n",
+    "**Esempio con `.max()`**\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "\n",
+    "table = np.array([\n",
+    "    [5, 3, 7, 1],\n",
+    "    [2, 6, 7, 9],\n",
+    "    [1, 1, 1, 1],\n",
+    "    [4, 3, 2, 0],\n",
+    "])\n",
+    "\n",
+    "# Massimo sull’intero array\n",
+    "print(table.max())        # 9\n",
+    "\n",
+    "# Massimo per ciascuna colonna (asse 0)\n",
+    "print(table.max(axis=0))  # array([5, 6, 7, 9])\n",
+    "\n",
+    "# Massimo per ciascuna riga (asse 1)\n",
+    "print(table.max(axis=1))  # array([7, 9, 1, 4])\n",
+    "```\n",
+    "\n",
+    "* **Senza `axis`** → funzione su tutti i valori.\n",
+    "* **Con `axis=k`** → operazione lungo l’asse k, restituisce un array con dimensione ridotta di 1.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Broadcasting\n",
+    "\n",
+    "La regola fondamentale:\n",
+    "\n",
+    "> Due array possono “broadcastarsi” se, per ogni asse, o hanno la stessa lunghezza, oppure almeno uno dei due è pari a 1.\n",
+    "\n",
+    "* Se in un asse una dimensione vale 1, NumPy **duplica** quel dato lungo quell’asse.\n",
+    "* Se le dimensioni coincidono, operazione elemento-per-elemento.\n",
+    "\n",
+    "**Esempio formale:**\n",
+    "\n",
+    "* `A.shape = (4, 1, 8)`\n",
+    "* `B.shape = (1, 6, 8)`\n",
+    "\n",
+    "| Asse   | A | B | Azione                 |\n",
+    "| ------ | - | - | ---------------------- |\n",
+    "| asse 0 | 4 | 1 | B duplicato 4 volte    |\n",
+    "| asse 1 | 1 | 6 | A duplicato 6 volte    |\n",
+    "| asse 2 | 8 | 8 | dimensioni uguali → OK |\n",
+    "\n",
+    "**Creazione degli array**\n",
+    "\n",
+    "```python\n",
+    "A = np.arange(32).reshape(4, 1, 8)\n",
+    "B = np.arange(48).reshape(1, 6, 8)\n",
+    "```\n",
+    "\n",
+    "**Somma con broadcasting**\n",
+    "\n",
+    "```python\n",
+    "C = A + B\n",
+    "print(C)\n",
+    "# Output:\n",
+    "# array([[[ 0,  2,  4,  6,  8, 10, 12, 14],\n",
+    "#         [ 8, 10, 12, 14, 16, 18, 20, 22],\n",
+    "#         [16, 18, 20, 22, 24, 26, 28, 30],\n",
+    "#         [24, 26, 28, 30, 32, 34, 36, 38],\n",
+    "#         [32, 34, 36, 38, 40, 42, 44, 46],\n",
+    "#         [40, 42, 44, 46, 48, 50, 52, 54]],\n",
+    "#\n",
+    "#        [[ 8, 10, 12, 14, 16, 18, 20, 22],\n",
+    "#         ...\n",
+    "#        ],\n",
+    "#        ...\n",
+    "# ])\n",
+    "```\n",
+    "\n",
+    "* NumPy estende internamente A e B alle stesse dimensioni 4×6×8, poi somma elemento per elemento.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Conclusione\n",
+    "\n",
+    "* **Shape** e **axes** sono la base per navigare array multidimensionali.\n",
+    "* Controlla sempre `.shape` e, quando serve, usa `.swapaxes()` o funzioni con `axis=`.\n",
+    "* Comprendere il **broadcasting** permette di scrivere calcoli vettoriali puliti e veloci, evitando loop espliciti.\n"
    ]
   }
  ],
