Enhance lezione6.ipynb with improved explanations for Pandas usage and typical applications in data wrangling

--- a/lezione6.ipynb
+++ b/lezione6.ipynb
@@ -10,10 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcf5a308",
+   "id": "4d5371ce",
    "metadata": {},
    "source": [
-    "### Tipici usi della libreria"
+    "### Miglior strumento di data wrangling\n",
+    "\n",
+    "Pandas è ideale per il data wrangling, ovvero il processo di trasformazione e pulizia dei dati grezzi per analisi e modelli, mentre NumPy/array eccelle nei calcoli intensivi una volta che il dataset è pronto."
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeac1d46",
+   "id": "308c465a",
    "metadata": {},
    "source": [
     "### Perché non basta usare liste Python o array NumPy al posto di Pandas?"
@@ -48,12 +50,12 @@
     "| Esigenza tipica nei dati biomedici                     | Liste Python                                | NumPy array                                           | Pandas DataFrame                                |\n",
     "| ------------------------------------------------------ | ------------------------------------------- | ----------------------------------------------------- | ----------------------------------------------- |\n",
     "| **Etichette (ID paziente, nome gene, tempo)**          | ❌ gestite “a mano” con strutture ausiliarie | ❌ non esistono; solo indici interi                    | ✅ `index`, `columns`, gerarchici (`MultiIndex`) |\n",
-    "| **Dati eterogenei** (numeri + stringhe + date)         | ✅ ma zero funzioni vettoriali               | ⚠️ possibile con `dtype=object`, ma perde performance | ✅ colonne con tipi diversi, ottimizzate         |\n",
-    "| **Valori mancanti** (`NaN`, `None`, sentinel)          | ❌ serve logica ad-hoc                       | ⚠️ `np.nan` solo per float; complicato per tipi misti | ✅ `isna`, `fillna`, propagazione coerente       |\n",
-    "| **Operazioni “SQL-like”** (`groupby`, `join`, `pivot`) | ❌ codice manuale e ciclo esplicito          | ❌ non previste                                        | ✅ una riga di codice idiomatica                 |\n",
-    "| **Time series** (resample, rolling window)             | ❌ da implementare                           | ⚠️ serve `np.searchsorted`/for loop                   | ✅ API dedicate (`resample`, `rolling`, `shift`) |\n",
-    "| **I/O nativo** (CSV, Excel, SQL, Parquet)              | ❌ librerie esterne, parsing manuale         | ❌ idem                                                | ✅ `read_*`, `to_*` one-liner                    |\n",
-    "| **Leggibilità notebook/paper**                         | 😐 spesso 3-4 strutture parallele           | 😐 array “senza volto”                                | 😀 tabelle auto-formattate                      |\n"
+    "| **Gestire dati eterogenei** (numeri + stringhe + date)         | ✅ ma zero funzioni vettoriali               | ⚠️ possibile con `dtype=object`, ma perde in performance | ✅ colonne con tipi diversi, ottimizzate         |\n",
+    "| **Valori mancanti** (`NaN`, `None`, sentinel)          | ❌ serve logica ad-hoc                       | ⚠️ `np.nan` solo per float; complicato per tipi misti | ✅ `isna` per identificare valori mancanti, `fillna`per riempire valori mancanti, propagazione coerente per propagare il valore precedente o successivo nelle celle vuote.       |\n",
+    "| **Operazioni “SQL-like”** (`groupby`, `join`, `pivot`) | ❌ codice manuale e ciclo esplicito          | ❌ non previste                                        | ✅ una riga di codice idiomatica (ovvero con funzioni intuitive e efficienti)                |\n",
+    "| **Time series**             | ❌ da implementare                           | ⚠️ serve `np.searchsorted`/for loop                   | ✅ API dedicate (`resample` per aggregazione a intervalli temporali, `rolling` per applicare operazioni statistiche su una finestra mobile di dati, `shift` per confrontare valori tra istanti di tempo diversi) |\n",
+    "| **I/O (input/output) nativo** (CSV, Excel, SQL, Parquet)              | ❌ librerie esterne, parsing manuale         | ❌ idem                                                | ✅ `read_*`, `to_*` tutte funzioni one-liner                    |\n",
+    "| **Leggibilità notebook/paper**                         | 😐 spesso 3-4 strutture parallele           | 😐 array senza intestazioni esplicite                             | 😀 tabelle auto-formattate                      |\n"
    ]
   },
   {
